[tool.poetry]
name = "vs-lab"
version = "0.1.0"
description = ""
authors = ["vitorhcsousa <vitorsousavhcs@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
polars = "^1.17.1"
numpy = "^2.0.0"
matplotlib = "^3.9.3"
seaborn = "^0.13.2"
torch = "^2.5.1"
transformers = "^4.47.0"
scikit-learn = "^1.6.0"
jupyter = "^1.1.1"
plotly = "^5.24.1"
pytorch-lightning = "^2.4.0"
datasets = "^3.1.0"
accelerate = "^1.2.0"
sentencepiece = "^0.2.0"
spacy = "^3.8.2"
torchvision = "^0.20.1"
opencv-python = "^4.10.0.84"
albumentations = "^1.4.22"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
